@@ -8,6 +8,7 @@
 			"Turn this tile into a [River] tile <for all movement> <[4] times> <after which this unit is consumed>",
 			"Turn this tile into a [Spring] tile <by consuming this unit> <in [non-[resource]] tiles> <if it hasn't used other actions yet>",
 			"Can upgrade to [Worker] <if it hasn't used other actions yet>",
+			"[This Unit] upgrades for free including special upgrades <for [AI player]> <upon turn end> <hidden from users>",
 			"Unbuildable",
 			"Cannot be purchased",
 			"Limited to [1] per Civilization"
